<resources>
    <string name="app_name" translatable="false">Playlist maker</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="media_library">Media Library</string>
    <string name="dark_theme">Dark theme</string>
    <string name="share_app">Share this App</string>
    <string name="text_support">Text Support</string>
    <string name="user_agreement">User Agreement</string>
    <string name="yandex_practicum_course_link" translatable="false">https://practicum.yandex.ru/referrals/?ref_code=gAAAAABoTdPbjwyqHhQ2jDogo1jktmwx_ANx8txVwvN1coXEluF02ER4F77hQRz8Ynn3E1vzIMTt-PHLQlhFj3n3MTIpCav2Iw%3D%3D</string>
    <string name="plain_text_intent_type" translatable="false">text/plain</string>
    <string name="mailto_uri_data" translatable="false">mailto:</string>
    <string name="developer_email" translatable="false">de.krylov@vk.com</string>
    <string name="letter_subject">Message for Playlist Maker developers</string>
    <string name="letter_text">Thank you for your great app!</string>
    <string name="user_agreement_link" translatable="false">https://yandex.ru/legal/practicum_offer/</string>
    <string name="clear">Clear</string>
    <string name="track_duration_template" translatable="false">" • %1$s"</string>
    <string name="open_track">Open track</string>
    <string name="no_results">Nothing found ;(</string>
    <string name="network_error">Network issues\n\nCouldn\'t retrieve data.\nCheck your Internet connection</string>
    <string name="reload">Reload</string>
    <string name="been_searched">You\'ve searched</string>
    <string name="clear_history">Clear history</string>
    <string name="searchbar_hint">Search</string>
    <string name="play">Play</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="add_to_favorite">Add to favorite</string>
    <string name="duration_label">Duration</string>
    <string name="album_label">Album</string>
    <string name="year_label">Year</string>
    <string name="genre_label">Genre</string>
    <string name="country_label">Country</string>
    <string name="new_playlist">New Playlist</string>
    <string name="no_playlists_yet">You have no playlists so far</string>
    <string name="empty_media_library">Your media library is empty</string>
    <string name="playlists">Playlists</string>
    <string name="favorite_tracks">Favorite tracks</string>
    <string name="loading">Loading</string>
    <string name="change_playlist_cover">Change playlist cover</string>
    <string name="playlist_name">Name*</string>
    <string name="playlist_description">Description</string>
    <string name="create_playlist">Create</string>
    <string name="exit_confirmation_title">Are you sure you want to exit?</string>
    <string name="exit_confirmation_message">All unsaved data will be lost</string>
    <string name="dismiss">Cancel</string>
    <string name="done">Exit</string>
    <string name="playlist_created">Playlist %1$s was created</string>
    <string name="added_to_playlist">Added to playlist %1$s</string>
    <string name="track_already_in_playlist">Track already in playlist %1$s</string>
    <plurals name="tracks_number">
        <item quantity="one">%d track</item>
        <item quantity="other">%d tracks</item>
    </plurals>
    <plurals name="minutes_number">
        <item quantity="one">%d minute</item>
        <item quantity="other">%d minutes</item>
    </plurals>
    <string name="playlist_duration_and_tracklist">%1$s · %2$s</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_playlist_dialog_message">Do you want to delete playlist «%1$s»?</string>
    <string name="delete_track_dialog_message">Do you want to delete track?</string>
    <string name="share_playlist">Share</string>
    <string name="edit_playlist_info">Edit information</string>
    <string name="delete_playlist">Delete playlist</string>
    <string name="no_tracks_to_share">This playlist doesn\'t have any tracks to share</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="no_internet_access">No Internet access</string>
    <string name="now_playing">Now playing</string>
    <string name="now_playing_description">Displays current track info</string>
</resources>