<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/LinearLayout"
    tools:context=".feature.settings.presentation.SettingsFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/appBar"
        style="@style/Widget.PlaylistMaker.AppBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/settings" />

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/themeSwitch"
        style="@style/Widget.PlaylistMaker.Setting.Switch"
        android:text="@string/dark_theme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBar" />

    <TextView
        android:id="@+id/shareButton"
        style="@style/Widget.PlaylistMaker.Setting.Button"
        android:text="@string/share_app"
        app:drawableEndCompat="@drawable/ic_share_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/themeSwitch" />

    <TextView
        android:id="@+id/supportButton"
        style="@style/Widget.PlaylistMaker.Setting.Button"
        android:text="@string/text_support"
        app:drawableEndCompat="@drawable/ic_support_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/shareButton" />

    <TextView
        android:id="@+id/agreementButton"
        style="@style/Widget.PlaylistMaker.Setting.Button"
        android:text="@string/user_agreement"
        app:drawableEndCompat="@drawable/ic_arrow_forward_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/supportButton" />

</androidx.constraintlayout.widget.ConstraintLayout>
