<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linearLayout"
    style="@style/LinearLayout">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideEnd"
        style="@style/Guideline.Horizontal"
        app:layout_constraintGuide_end="?attr/actionBarSize" />

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/materialToolbar"
        style="@style/Widget.PlaylistMaker.AppBar"
        app:layout_constraintBottom_toTopOf="@+id/searchButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/app_name" />

    <Button
        android:id="@+id/searchButton"
        style="@style/Button.MainScreen"
        android:text="@string/search"
        app:icon="@drawable/ic_search_24"
        android:layout_margin="@dimen/normal_100"
        app:layout_constraintBottom_toTopOf="@+id/mediaLibraryButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialToolbar" />

    <Button
        android:id="@+id/mediaLibraryButton"
        style="@style/Button.MainScreen"
        android:text="@string/media_library"
        app:icon="@drawable/ic_media_library_24"
        app:layout_constraintBottom_toTopOf="@+id/settingsButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchButton" />

    <Button
        android:id="@+id/settingsButton"
        style="@style/Button.MainScreen"
        android:text="@string/settings"
        app:icon="@drawable/ic_settings_24"
        app:layout_constraintBottom_toBottomOf="@id/guideEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mediaLibraryButton" />

</androidx.constraintlayout.widget.ConstraintLayout>