<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:fitsSystemWindows="false"
    tools:context=".feature.search.presentation.SearchFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/appBar"
        style="@style/Widget.PlaylistMaker.AppBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/search" />

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBar">

        <com.google.android.material.search.SearchBar
            android:id="@+id/searchBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/searchbar_hint"
            app:menu="@menu/searchbar_menu" />

        <com.google.android.material.search.SearchView
            android:id="@+id/searchView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/searchbar_hint"
            app:layout_anchor="@id/searchBar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="@dimen/searchViewMarginHorizontal"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/historyLabel"
                    style="@style/TextAppearance.PlaylistMaker.TitleMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/historyLabelMarginVertical"
                    android:text="@string/been_searched" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/searchRecyclerMarginBottom"
                    android:requiresFadingEdge="vertical"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/clearHistoryButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/clearButtonMarginBottom"
                    android:text="@string/clear_history" />
            </LinearLayout>

            <com.google.android.material.loadingindicator.LoadingIndicator
                android:id="@+id/loadingIndicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/loading"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/stateContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:visibility="gone"
                tools:visibility="visible">

                <TextView
                    android:id="@+id/stateInfo"
                    style="@style/Widget.PlaylistMaker.TextView.StateInfo"
                    android:layout_width="wrap_content"
                    android:drawablePadding="@dimen/stateInfoDrawablePadding"
                    android:maxLines="6"
                    app:drawableTopCompat="@drawable/ic_nothing_found_120"
                    tools:text="@string/no_results" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/retryButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/retryButtonMarginTop"
                    android:text="@string/reload" />

            </LinearLayout>

        </com.google.android.material.search.SearchView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</androidx.constraintlayout.widget.ConstraintLayout>