<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    style="@style/ConstraintLayout"
    tools:context=".feature.player.presentation.PlayerActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTop"
        style="@style/Guideline.Horizontal"
        app:layout_constraintGuide_begin="@dimen/panel_header_height" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideStart"
        style="@style/Guideline.Vertical"
        app:layout_constraintGuide_begin="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideEnd"
        style="@style/Guideline.Vertical"
        app:layout_constraintGuide_end="24dp" />

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_arrow_back_24"
        app:titleTextAppearance="@style/Text.PanelHeader" />

    <ImageView
        android:id="@+id/songCover"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:importantForAccessibility="no"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@id/guideEnd"
        app:layout_constraintStart_toStartOf="@id/guideStart"
        app:layout_constraintTop_toBottomOf="@id/guidelineTop"
        app:layout_constraintWidth_max="500dp" />

    <TextView
        android:id="@+id/songTitle"
        style="@style/Text.Medium.22"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="@id/songCover"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/songCover"
        app:layout_constraintTop_toBottomOf="@id/songCover"
        app:layout_constraintWidth="wrap_content_constrained" />

    <TextView
        android:id="@+id/songAuthor"
        style="@style/Text.Medium.14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="@id/songCover"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/songTitle"
        app:layout_constraintTop_toBottomOf="@id/songTitle"
        app:layout_constraintVertical_chainStyle="spread" />

    <com.google.android.material.button.MaterialButtonGroup
        android:id="@+id/buttonGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:spacing="50dp"
        app:layout_constraintBottom_toTopOf="@id/songInfoFlow"
        app:layout_constraintEnd_toEndOf="@id/guideEnd"
        app:layout_constraintStart_toStartOf="@id/guideStart"
        app:layout_constraintTop_toBottomOf="@id/songAuthor">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/addToPlaylistButton"
            style="?attr/materialIconButtonFilledStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/add_to_playlist"
            android:gravity="center"
            app:icon="@drawable/ic_add_to_playlist_24"
            app:materialSizeOverlay="@style/SizeOverlay.Material3Expressive.Button.IconButton.Medium" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/playButton"
            style="?attr/materialIconButtonFilledStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/play"
            android:gravity="center"
            app:icon="@drawable/ic_play_24"
            app:materialSizeOverlay="@style/SizeOverlay.Material3Expressive.Button.IconButton.Large" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/addToFavoriteButton"
            style="?attr/materialIconButtonFilledStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/add_to_favorite"
            android:gravity="center"
            app:icon="@drawable/ic_favorite_24"
            app:materialSizeOverlay="@style/SizeOverlay.Material3Expressive.Button.IconButton.Medium" />
    </com.google.android.material.button.MaterialButtonGroup>

    <TextView
        android:id="@+id/songCurrentDuration"
        style="@style/Text.Medium.14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/songInfoFlow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonGroup"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/songInfoFlow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="songDurationLabel,songDurationFetched,songAlbumLabel,songAlbumFetched,songYearLabel,songYearFetched,songGenreLabel,songGenreFetched,songCountryLabel,songCountryFetched"
        app:flow_horizontalStyle="spread"
        app:flow_maxElementsWrap="2"
        app:flow_verticalStyle="packed"
        app:flow_wrapMode="chain"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/songCover"
        app:layout_constraintStart_toStartOf="@id/songCover" />

    <TextView
        android:id="@+id/songDurationLabel"
        style="@style/Text.SongInfo.Label"
        android:text="@string/duration_label" />

    <TextView
        android:id="@+id/songDurationFetched"
        style="@style/Text.SongInfo.Fetched" />

    <TextView
        android:id="@+id/songAlbumLabel"
        style="@style/Text.SongInfo.Label"
        android:text="@string/album_label" />

    <TextView
        android:id="@+id/songAlbumFetched"
        style="@style/Text.SongInfo.Fetched" />

    <TextView
        android:id="@+id/songYearLabel"
        style="@style/Text.SongInfo.Label"
        android:text="@string/year_label" />

    <TextView
        android:id="@+id/songYearFetched"
        style="@style/Text.SongInfo.Fetched" />

    <TextView
        android:id="@+id/songGenreLabel"
        style="@style/Text.SongInfo.Label"
        android:text="@string/genre_label" />

    <TextView
        android:id="@+id/songGenreFetched"
        style="@style/Text.SongInfo.Fetched" />

    <TextView
        android:id="@+id/songCountryLabel"
        style="@style/Text.SongInfo.Label"
        android:text="@string/country_label" />

    <TextView
        android:id="@+id/songCountryFetched"
        style="@style/Text.SongInfo.Fetched" />

</androidx.constraintlayout.widget.ConstraintLayout>