<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/ConstraintLayout">

    <!-- Guidelines -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideStart"
        style="@style/Guideline.Vertical"
        app:layout_constraintGuide_begin="@dimen/normal_100" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideEnd"
        style="@style/Guideline.Vertical"
        app:layout_constraintGuide_end="@dimen/normal_100" />

    <!-- Header -->
    <com.dimasla4ee.playlistmaker.ui.PanelHeader
        android:id="@+id/panelHeader"
        style="@style/LinearLayout.PanelHeader"
        android:text="@string/search"
        app:iconSrc="@drawable/ic_arrow_back_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:showIcon="true" />

    <!-- SearchBar -->
    <LinearLayout
        android:id="@+id/searchBarLayout"
        style="@style/LinearLayout.Searchbar"
        android:layout_width="0dp"
        android:layout_marginTop="@dimen/small_100"
        app:layout_constraintEnd_toEndOf="@id/guideEnd"
        app:layout_constraintStart_toStartOf="@id/guideStart"
        app:layout_constraintTop_toBottomOf="@id/panelHeader">

        <ImageView
            style="@style/Icon.SearchBar"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_search_24" />

        <EditText
            android:id="@+id/queryInput"
            style="@style/EditText.SearchBar"
            android:layout_height="wrap_content"
            android:autofillHints="none"
            android:hint="@string/searchbar_hint"
            android:imeOptions="actionSearch"
            android:inputType="textNoSuggestions"
            android:singleLine="true"
            android:textSize="@dimen/text_16" />

        <ImageView
            android:id="@+id/clearQueryButton"
            style="@style/Icon.SearchBar"
            android:contentDescription="@string/clear"
            android:src="@drawable/ic_clear_24"
            android:visibility="gone" />
    </LinearLayout>

    <!-- Search Results RecyclerView -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/resultsRecycler"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/normal_150"
        android:requiresFadingEdge="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideEnd"
        app:layout_constraintStart_toStartOf="@id/guideStart"
        app:layout_constraintTop_toBottomOf="@id/searchBarLayout" />

    <!-- Search History -->
    <TextView
        android:id="@+id/historyLabel"
        style="@style/Text.Medium.19"
        android:layout_width="wrap_content"
        android:layout_marginVertical="@dimen/normal_150"
        android:text="@string/been_searched"
        app:layout_constraintEnd_toEndOf="@id/guideEnd"
        app:layout_constraintStart_toStartOf="@id/guideStart"
        app:layout_constraintTop_toBottomOf="@id/searchBarLayout" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/historyRecycler"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/normal_150"
        android:paddingBottom="@dimen/normal_150"
        android:requiresFadingEdge="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/clearHistoryButton"
        app:layout_constraintEnd_toEndOf="@id/guideEnd"
        app:layout_constraintStart_toStartOf="@id/guideStart"
        app:layout_constraintTop_toBottomOf="@id/historyLabel" />

    <Button
        android:id="@+id/clearHistoryButton"
        style="@style/Button.Common"
        android:layout_marginTop="@dimen/normal_150"
        android:text="@string/clear_history"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideEnd"
        app:layout_constraintStart_toStartOf="@id/guideStart" />

    <!-- Search Status Layout -->
    <ProgressBar
        android:id="@+id/loadingIndicator"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:indeterminate="true"
        android:indeterminateTint="@color/blue"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchBarLayout" />

    <ImageView
        android:id="@+id/stateImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/big_325"
        android:importantForAccessibility="no" />

    <TextView
        android:id="@+id/stateText"
        style="@style/Text.Medium.19"
        android:layout_width="0dp"
        android:layout_marginHorizontal="@dimen/normal_150"
        android:layout_marginTop="@dimen/normal_100"
        android:layout_marginBottom="@dimen/normal_150"
        android:maxLines="4"
        android:textAlignment="center" />

    <Button
        android:id="@+id/retryButton"
        style="@style/Button.Common"
        android:text="@string/reload" />

    <androidx.constraintlayout.helper.widget.Flow
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:constraint_referenced_ids="stateImage,stateText,retryButton"
        app:flow_maxElementsWrap="1"
        app:flow_verticalGap="@dimen/normal_100"
        app:flow_verticalStyle="packed"
        app:flow_wrapMode="chain"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideEnd"
        app:layout_constraintStart_toStartOf="@id/guideStart"
        app:layout_constraintTop_toBottomOf="@id/searchBarLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>